<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReviewInformation"
    android:orientation="vertical"
    android:background="@color/gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reviewInfo"
        android:textSize="@dimen/sizeSDetail"
        android:textColor="@color/white"
        android:background="@drawable/bottom_rounded_corners"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:textStyle="bold"
    />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/country"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/address"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvSenderName"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvSenderCountry"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvSenderAddress"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvSenderContact"
            android:textColor="@color/black"
        />
    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_compare_arrows_24"
        android:rotation="90"
        android:scaleType="centerCrop"
        android:layout_marginLeft="25sp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvRecieverName"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvRecieverCountry"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvRecieverAddress"
            android:textColor="@color/black"
        />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/none"
            android:gravity="center"
            android:id="@+id/tvRecieverContact"
            android:textColor="@color/black"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_margin="30dp"
            android:src="@drawable/baseline_clear_24"
            android:id="@+id/btnClear"
            android:background="@drawable/button_radius"
        />
    </LinearLayout>
</LinearLayout>